@@ -3,14 +3,14 @@ return {
 		activatewhenbuilt = true,
 		buildangle = 16384,
 		buildpic = "leganavyartyship.DDS",
-		buildtime = 133300,
+		buildtime = 145000,
 		canattackground = true,
 		canmove = true,
 		collisionvolumeoffsets = "0 0 0",
 		collisionvolumescales = "79 80 200",
 		collisionvolumetype = "CylZ",
 		corpse = "DEAD",
-		energycost = 115000,
+		energycost = 125000,
 		explodeas = "flagshipExplosion",
 		floater = true,
 		footprintx = 8,
@@ -19,9 +19,9 @@ return {
 		idleautoheal = 25,
 		idletime = 1800,
 		mass = 9999999,
-		maxacc = 0.01104,
-		maxdec = 0.01104,
-		metalcost = 12000,
+		maxacc = 0.01,
+		maxdec = 0.01,
+		metalcost = 13000,
 		minwaterdepth = 15,
 		movementclass = "BOAT9",
 		movestate = 0,
@@ -33,10 +33,10 @@ return {
 		selfdestructas = "flagshipExplosionSelfd",
 		sightdistance = 689,
 		sightemitheight = 52,
-		speed = 53.85,
+		speed = 48,
 		turninplace = true,
 		turninplaceanglelimit = 90,
-		turnrate = 135,
+		turnrate = 125,
 		waterline = 0,
 		customparams = {
 			model_author = "ZephyrSkies",
