@@ -19,7 +19,7 @@ return {
 		footprintz = 4,
 		idleautoheal = 5,
 		idletime = 1800,
-		health = 4000,
+		health = 3800,
 		speed = 58,
 		minwaterdepth = 12,
 		movementclass = "BOAT4",
